# BlumenHorizon

./: .env  .gitignore  LICENSE  README.md  gunicorn.conf.py  pyproject.toml  setup.cfg
accounts/: admin.py  backends.py  models.py  urls.py
accounts/forms/: __init__.py  user_form.py  user_signin_form.py  user_signup_form.py
accounts/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_rename_username_user_email_alter_user_first_name_and_more.py  0004_alter_user_first_name_alter_user_is_active_and_more.py  0005_remove_user_phone_number_user_phonenumber.py  0006_alter_user_phonenumber.py  0007_alter_user_created_at_alter_user_updated_at.py  0008_alter_user_is_staff_alter_user_is_superuser.py  0009_alter_user_is_staff.py
accounts/models/: user.py
accounts/tests/: conftest.py  test_user_authentication.py  test_user_creation.py
accounts/views/: me.py  signin.py  signup.py
cart/: admin.py  apps.py  cart.py  forms.py  models.py  tasks.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_auto_20250314_1152.py  0002_auto_9532189.py  0002_order_code_alter_order_is_surprise.py  0002_order_refund_currency_convertasion_fee.py  0003_order_recipient_name.py  0003_ordercreditadjustment_payment_system_fee.py  0004_alter_orderbouquets_supplier_vat_rate_and_more.py  0004_order_clarify_address.py  0005_order_status.py  0006_alter_order_building_alter_order_city_and_more.py  0007_order_recipient_address_form.py  0008_order_address_form_order_name_and_more.py  0009_order_grand_total_orderbouquets_quantity_and_more.py  0010_alter_order_grand_total.py  0011_order_sub_total_order_tax_order_tax_percent_and_more.py  0012_alter_order_sub_total_alter_order_tax_and_more.py  0013_order_instructions_order_message_card.py  0014_orderbouquets_product_discount_price_and_more.py  0015_orderbouquets_product_discount_and_more.py  0016_alter_orderbouquets_product_tax_price_discounted_and_more.py  0017_alter_order_grand_total_alter_order_sub_total_and_more.py  0018_alter_orderbouquets_product_discount_price_and_more.py  0019_alter_order_building_alter_order_city_and_more.py  0020_order_delivery_date_order_delivery_time.py  0021_order_session_key.py  0022_order_language_code.py  0023_alter_orderbouquets_options_and_more.py  0024_order_is_agreement_accepted.py  0025_alter_order_user.py  0026_rename_product_discount_orderbouquets_discount_and_more.py  0026_rename_product_price_orderbouquets_base_price_and_more.py  0027_auto_20250204_2156.py  0027_orderbouquets_taxes_orderproducts_taxes.py  (+46 more)
carton/: __init__.py  cart.py  module_loading.py  settings.py
catalogue/: __init__.py  admin.py  apps.py  forms.py  models.py  translation.py  urls.py
checkout/: apps.py  models.py  views.py
core/: base_models.py  celery.py  settings.py  urls.py
dbdump/: catalogue_bouquet.sql  catalogue_bouquet_colors.sql  catalogue_bouquet_flowers.sql  catalogue_color.sql  catalogue_flower.sql  catalogue_product.sql
extended_contrib_models/: admin.py  apps.py  models.py  translation.py
livesearch/: apps.py  urls.py  views.py
mainpage/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  views.py
merchant/: apps.py  exceptions.py  urls.py  views.py
nginx/: blumenhorizon.conf  nginx.conf
products/: admin.py  models.py  translation.py
seo/: admin.py  apps.py  models.py  sitemaps.py  urls.py  views.py
tests/: conftest.py  factories.py  types.py
tg_bot/: __init__.py  main.py
wysiwyg/: apps.py  urls.py  views.py
(+429 files in other folders)
