[tool.poetry]
name = "blumenhorizon"
version = "0.1.0"
description = ""
authors = ["Leviinson <votosi197@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.14.0"
django-stubs = "^5.1.1"
djangorestframework-stubs = "^3.15.2"

[virtualenvs]
in-project = true

[tool.black]
line-length=88

[tool.isort]
line_length=88
profile="black"

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
explicit_package_bases = true
exclude=[".venv", "migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "-v"
log_level = "INFO"

[tool.pytest_env]
ENV="no-test"
SITE_NAME="BlumenHorizon"
SITE_DOMAIN="0.0.0.0:8000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.4.6"
celery = "^5.4.0"
django-redis = "^5.4.0"
django-tinymce = "^4.1.0"
django-rosetta = "^0.10.1"
phonenumbers = "^8.13.47"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
babel = "^2.16.0"
pillow = "^11.0.0"
django-filter = "^24.3"
django-colorfield = "^0.11.0"
django-modeltranslation = "^0.19.10"
django-carton = "^1.2.1"
stripe = "^11.2.0"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-cacheops = "^7.1"
python-telegram-bot = "^21.7"
pytest-env = "^1.1.5"
gunicorn = {extras = ["gthread"], version = "^23.0.0"}
pytest-django = "^4.9.0"
pytest = "^8.3.3"
